<resources>
    <string name="app_name">SoulChat</string>
    <string name="app_index_text">相遇总是美好的</string>

    <string name="text_main_star">星球</string>
    <string name="text_main_square">广场</string>
    <string name="text_main_chat">聊天</string>
    <string name="text_main_moment">发布 \n瞬间</string>
    <string name="text_main_me">我的</string>


    <string name="star_titletext">遇见</string>
    <string name="text_main_star_1">随机</string>
    <string name="text_main_star_2">灵魂</string>
    <string name="text_main_star_3">缘分</string>
    <string name="text_main_star_4">恋爱</string>


    <string name="text_dialog_camera">拍一张</string>
    <string name="text_dialog_ablum">从相册选择</string>
    <string name="text_dialog_cancel">返回</string>
    <string name="connect_to_server">正在连接服务器....</string>


    <string name="text_devices_not_supper_audio">设备不支持音视频通话</string>
    <string name="text_server_status">服务器未连接</string>


</resources>