<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <RelativeLayout
        android:id="@+id/toobarlayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/tv_star_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/star_titletext"
            android:textColor="@color/colortitle"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_camera"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/img_camera" />

            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/img_add" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_connect_status"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/toobarlayout"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:text="@string/connect_to_server"
        android:textColor="@android:color/white" />

    <com.moxun.tagcloudlib.view.TagCloudView
        android:id="@+id/mCloudView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_weight="1"
        app:autoScrollMode="uniform"
        app:radiusPercent="0.8"
        app:scrollSpeed="1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_random"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_star_1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_star_card_1" />

            <TextView
                android:id="@+id/tv_random"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_main_star_1"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_soul"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_star_2"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_star_card_2" />

            <TextView
                android:id="@+id/tv_soul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_main_star_2"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_fate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_star_3"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_star_card_3" />

            <TextView
                android:id="@+id/tv_luck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_main_star_3"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_love"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_star_4"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_star_card_4" />

            <TextView
                android:id="@+id/tv_love"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_main_star_4"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>